--- a/content/posts/2019-11-waves.md
+++ b/content/posts/2019-11-waves.md
@@ -12,11 +12,11 @@ comments: true
 share: true
 type: post
 ---
-This article was featured in Five To Nine Vol 1. To read the more colorful and artistic version, and check out more cool work from other amazing creators, make sure to visit the [five to nine website](https://fivetoninemag.com/) and [subscribe to the mailing list](https://fivetoninemag.us19.list-manage.com/subscribe?u=4022678040daebd86db5f0506&id=8ac3133fe6) to receive full access to the five to nine e-zine in your inbox!
+This poem was featured in Five To Nine Vol 1. To read the more colorful and artistic version, and check out more cool work from other amazing creators, make sure to visit the [five to nine website](https://fivetoninemag.com/) and [subscribe to the mailing list](https://fivetoninemag.us19.list-manage.com/subscribe?u=4022678040daebd86db5f0506&id=8ac3133fe6) to receive full access to the five to nine e-zine in your inbox!
 
 Without further ado, I present to you **Waves**
 
-****
+- - -
 
 I
 
